--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Rebecca Swanson</h1>
             <p>Welcome to my quick Bio page!</p>
             <p>To visit other pages:</p>
-            <p><a href="porfolio.html">My Portfolio</a></p>
+            <p><a href="/Portfolio.html">My Portfolio</a></p>
         <h2>Bio</h2>
             <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.
                  I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science </p>
