--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,8 +22,8 @@
 				</p>
 			<h2>Relevant Projects</h2>
 				<ol>
-					<li><a href="https://drive.google.com/drive/folders/12d7UG5Mvny7tFD2h5QlclQG7XlR6dyzP?usp=sharing>Elementary School Branding Kit</a> 
-						<p><img src="https://drive.google.com/file/d/1e1DlT06J077BI6z6n5z56GdN4DG2mstN/view?usp=sharing" alt="Griffith Elementary Brand Logo" style"width: 25%; height: 25%;" />
+					<li><a href="https://drive.google.com/drive/folders/12d7UG5Mvny7tFD2h5QlclQG7XlR6dyzP?usp=sharing">Elementary School Branding Kit</a> 
+						<p><img src="https://drive.google.com/file/d/1e1DlT06J077BI6z6n5z56GdN4DG2mstN/view?usp=sharing" alt="Griffith Elementary Brand Logo" style= "width: 25%; height: 25%;" />
 						</p>
 						<p>I created a branding toolkit, centered around accessibility and overall brand focus and appearance
 						for my current Elementary school. Elements included colors, fonts, presentation templates, and letterhead templates.
