--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,6 +12,8 @@
 				<p><a href="index.html">Bio Page</a>
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
+				<p>I am also currently a 5th grade Educator at Griffith Elementary School.</p>
+				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 25%; height: auto;" />
 				<p> You can find my most recent resume below</p>
 					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true"></iframe>
 				<p>Relevant courses that I have taken to Instructional Technology and Learning Design include:
@@ -23,7 +25,7 @@
 			<h2>Relevant Projects</h2>
 				<ol>
 					<li><a href="https://drive.google.com/drive/folders/12d7UG5Mvny7tFD2h5QlclQG7XlR6dyzP?usp=sharing">Elementary School Branding Kit</a> 
-						<p><img src="https://drive.google.com/file/d/1e1DlT06J077BI6z6n5z56GdN4DG2mstN/view?usp=sharing" alt="Griffith Elementary Brand Logo" style= "width: 25%; height: 25%;" />
+						<p><img src="https://drive.google.com/file/d/1e1DlT06J077BI6z6n5z56GdN4DG2mstN/view?usp=sharing" alt="Griffith Elementary Brand Logo" style="width: 25%; height: 25%;" />
 						</p>
 						<p>I created a branding toolkit, centered around accessibility and overall brand focus and appearance
 						for my current Elementary school. Elements included colors, fonts, presentation templates, and letterhead templates.
@@ -38,7 +40,7 @@
 					<li><a href="https://drive.google.com/drive/folders/1z3L9s-YHT57LFItD7PSzWbcxU5mbXU85?usp=sharing">Universal Learning Design Unit: Weather Forecasting</a>
 						<p>I created a 5-day unit focusing on weather forecasting for 5th graders.
 						These lessons followed guidelines set out in principles for Universal Learning Design.
-						Examples of UDL Guidelines can be found here: <a href=udlguidelines.cast.org">Cast: The UDL Guidelines</a>
+						Examples of UDL Guidelines can be found here: <a href="http://udlguidelines.cast.org">Cast: The UDL Guidelines</a>
 						</p>
 					</li>
 	<body>
