Add CSS, Fix Embeds and Images

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,17 +5,18 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/stylesheet.css">
 	</head>
     <body>
 		<h1>Portfolio</h1>
-				<p>To Return to Bio page:</p>
+				<p class="visit">To Return to Bio page:</p>
 				<p><a href="index.html">Bio Page</a>
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
 				<p>I am also currently a 5th grade Educator at Griffith Elementary School.</p>
-				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 25%; height: auto;" />
+				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 150px%; height: 150px;" />
 				<p> You can find my most recent resume below</p>
-					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true"></iframe>
+					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true" style="width: 100%; height: 1000px;"></iframe>
 				<p>Relevant courses that I have taken to Instructional Technology and Learning Design include:
 					<ul>
 						<li>Theoretical Framework of Advanced Learning Environments</li>
@@ -23,9 +24,9 @@
 					</ul>
 				</p>
 			<h2>Relevant Projects</h2>
-				<ol>
+				<ol class="items-list">
 					<li><a href="https://drive.google.com/drive/folders/12d7UG5Mvny7tFD2h5QlclQG7XlR6dyzP?usp=sharing">Elementary School Branding Kit</a> 
-						<p><img src="https://drive.google.com/file/d/1e1DlT06J077BI6z6n5z56GdN4DG2mstN/view?usp=sharing" alt="Griffith Elementary Brand Logo" style="width: 25%; height: 25%;" />
+						<p><img src="https://ncstate-eci519.github.io/my-website-reswans2/Griffith%20Elementary%20School.png" alt="Griffith Elementary Brand Logo" style="width: 25%; height: 25%;" />
 						</p>
 						<p>I created a branding toolkit, centered around accessibility and overall brand focus and appearance
 						for my current Elementary school. Elements included colors, fonts, presentation templates, and letterhead templates.
