--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+        <link rel="stylesheet" href="css/stylesheet.css">
+    </head>
 	<body>
         <h1>Rebecca Swanson</h1>
-            <p>Welcome to my quick Bio page!</p>
-            <p>To visit other pages:</p>
+            <p class="top-paragraph">Welcome to my quick Bio page!</p>
+            <p class="visit">To visit other pages:</p>
             <p><a href="Portfolio.html">Portfolio</a></p>
         <h2>Bio</h2>
             <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.
@@ -19,8 +20,9 @@
             <p>Right now I am attending North Carolina State University in their Technology and Learning Design Masters of Education program. I plan to go into Instructional Design after earning my degree and a certification.</p>
             <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate on https://twitch.tv/otterkaiju.</p>
         <h2>Favorite Ed Tech Tools</h2>
-        <p>My favorite Educational/Instructional Technology are ones that allow your or your students to create content!</p>
-        <ul>
+        <p class="tools-info">My favorite Educational/Instructional Technology are ones that allow your or your students to create content!
+        </p>
+        <ul class="items-list">
             <li>Flipgrid
                 <p>Flipgrid allows you or your students to create short videos! These are typically videos of yourself, but you can also record a whiteboard. There are plenty of fun filters, pictures, and emojis to add to the thumbnail or to your video. I also enjoy using fun graphics or the frames to add to your videos. My students enjoy making &quot;newscasts&quot; with their frames.</p></li>
             <li>Scratch and Scratch, Jr.
