Fixed Embed issues and class issue

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,11 +14,11 @@
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
 				<p>I am also currently a 5th grade Educator at Griffith Elementary School.</p>
-				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 150px%; height: 150px;" />
+				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 150px; height: 150px;" />
 				<p> You can find my most recent resume below</p>
-					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true" style="width: 100%; height: 1000px;"></iframe>
+					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true" style="width: 500px; height: 1000px;"></iframe>
 				<p>Relevant courses that I have taken to Instructional Technology and Learning Design include:
-					<ul>
+					<ul class="items-list">
 						<li>Theoretical Framework of Advanced Learning Environments</li>
 						<li>Digital Learning and Staff Development</li>
 					</ul>
