Fixed size of griffith logo

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,7 +26,7 @@
 			<h2>Relevant Projects</h2>
 				<ol class="items-list">
 					<li><a href="https://drive.google.com/drive/folders/12d7UG5Mvny7tFD2h5QlclQG7XlR6dyzP?usp=sharing">Elementary School Branding Kit</a> 
-						<p><img src="https://ncstate-eci519.github.io/my-website-reswans2/Griffith%20Elementary%20School.png" alt="Griffith Elementary Brand Logo" style="width: 25%; height: 25%;" />
+						<p><img src="https://ncstate-eci519.github.io/my-website-reswans2/Griffith%20Elementary%20School.png" alt="Griffith Elementary Brand Logo" style="width: 150px; height: 150px;" />
 						</p>
 						<p>I created a branding toolkit, centered around accessibility and overall brand focus and appearance
 						for my current Elementary school. Elements included colors, fonts, presentation templates, and letterhead templates.
