Unit 5 CSS Formatting

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     </head>
 	<body>
         <h1>Rebecca Swanson</h1>
-            <p class="top-paragraph">Welcome to my quick Bio page!</p>
-            <p class="visit">To visit other pages:</p>
-            <p><a href="Portfolio.html">Portfolio</a></p>
+        <section class="main-section"   
+            <div class="nav-bar" 
+                <p><a href="Portfolio.html">Portfolio</a></p>
+            </div>
+        </section>
         <h2>Bio</h2>
             <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.
                  I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science </p>
