--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
     </head>
 	<body>
         <h1>Rebecca Swanson</h1>
-        <section class="main-section"   
-            <div class="nav-bar" 
-                <p><a href="Portfolio.html">Portfolio</a></p>
-            </div>
-        </section>
+        <nav>
+            <ul>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">Bio Main Page</a></li>
+            </ul>
+        </nav>
         <h2>Bio</h2>
-            <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.
-                 I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science </p>
-            <p>After college, I decided to go into teaching and attended Salem College, earning my teaching license to teach K-6, Middle School Social Studies, and Middle School Science</p>
+            <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.</p>
+                <aside class="aside">
+                    <h3>Past Educational Experience</h3>
+                 <p>I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science.
+                 I attended Salem College and obtained a license to teach K-6 and 6-9 Science and Social Studies in 2015. 
+                 I have been a Residential Adviser, Student Government member and chair leader, political organization Vice President, and President of the Alpha Beta Omicron Chapter of Kappa Delta Pi, the International Honors Society of Education. 
+                </p>
+                </aside>
             <p>Throughout my career I have taught 2nd, 4th, and 5th grades, and have grown a passion for using technology in my classroom and guiding others on best practices in their own classroom.</p>
             <p>Right now I am attending North Carolina State University in their Technology and Learning Design Masters of Education program. I plan to go into Instructional Design after earning my degree and a certification.</p>
-            <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate on https://twitch.tv/otterkaiju.</p>
+            <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate at twitch. You can see my channel at
+                <a href="https://twitch.tv/otterkaiju" class="griffith">Twitch</a>
+            </p>
         <h2>Favorite Ed Tech Tools</h2>
         <p class="tools-info">My favorite Educational/Instructional Technology are ones that allow your or your students to create content!
         </p>
