--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,12 +9,16 @@
 	</head>
     <body>
 		<h1>Portfolio</h1>
-				<p class="visit">To Return to Bio page:</p>
-				<p><a href="index.html">Bio Page</a>
+		<nav>
+            <ul>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">Bio Main Page</a></li>
+            </ul>
+        </nav>
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
-				<p>I am also currently a 5th grade Educator at Griffith Elementary School.</p>
-				<img src="https://www.wsfcs.k12.nc.us//cms/lib/NC01001395/Centricity/Domain/3995/Bulldog.PNG" alt="Griffith Bulldog" style="width: 150px; height: 125px;" />
+				<p>I am also currently a 5th grade Educator. Check out my school below.</p>
+				<a href="http://www.wsfcs.k12.nc.us/griffithes" class="griffith">Griffith Elementary</a>
 				<p> You can find my most recent resume below</p>
 					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true" style="width: 1000px; height: 1500px;"></iframe>
 				<p>Relevant courses that I have taken to Instructional Technology and Learning Design include:
