changed background to fix accessibility issues

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,10 +11,14 @@
     <body>
 		<h1>Portfolio</h1>
 		<nav>
-            <ul>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="index.html">Bio Main Page</a></li>
-            </ul>
+			<div class="row">
+				<div class="col-xs-12 col-md-3">
+					<a href="Portfolio.html">Portfolio</a>
+				</div>
+				<div class="col-xs-12 col-md-3">
+					<a href="index.html">Bio Main Page</a>
+				</div>
+			</div>
         </nav>
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
