--- a/index.html
+++ b/index.html
@@ -11,24 +11,33 @@
 	<body>
         <h1>Rebecca Swanson</h1>
         <nav>
-            <ul>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="index.html">Bio Main Page</a></li>
-            </ul>
+			<div class="row blue">
+				<div class="col-xs-12 col-md-3">
+					<a href="Portfolio.html">Portfolio</a>
+				</div>
+				<div class="col-xs-12 col-md-3">
+					<a href="index.html">Bio Main Page</a>
+				</div>
+			</div>
         </nav>
         <h2>Bio</h2>
             <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.</p>
-                <aside class="aside">
-                    <h3>Past Educational Experience</h3>
-                 <p>I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science.
-                 I attended Salem College and obtained a license to teach K-6 and 6-9 Science and Social Studies in 2015. 
-                 I have been a Residential Adviser, Student Government member and chair leader, political organization Vice President, and President of the Alpha Beta Omicron Chapter of Kappa Delta Pi, the International Honors Society of Education. 
-                </p>
-                </aside>
+                <div class="card champ">
+                    <h5 class="card-header">Education</h5>
+                    <div class="card-body">
+                    <h5 class="card-title">Past Education Experience</h5>
+                    <p class="card-text">I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science.
+                        I attended Salem College and obtained a license to teach K-6 and 6-9 Science and Social Studies in 2015. 
+                        I have been a Residential Adviser, Student Government member and chair leader, political organization Vice President, and President of the Alpha Beta Omicron Chapter of Kappa Delta Pi, the International Honors Society of Education.
+                    </p>
+                    <h5 class="card-title">Current Education Program</h5>
+                    <p class= "card-text">Right now I am attending North Carolina State University in their Technology and Learning Design Masters of Education program. I plan to go into Instructional Design after earning my degree and a certification.
+                    </p>
+                    <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/" class="btn btn-primary">NCSU M.Ed in LD&T</a>
+                    </div>
+                </div>
             <p>Throughout my career I have taught 2nd, 4th, and 5th grades, and have grown a passion for using technology in my classroom and guiding others on best practices in their own classroom.</p>
-            <p>Right now I am attending North Carolina State University in their Technology and Learning Design Masters of Education program. I plan to go into Instructional Design after earning my degree and a certification.</p>
-            <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate at twitch. You can see my channel at
-                <a href="https://twitch.tv/otterkaiju" class="griffith">Twitch</a>
+            <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate at twitch.
             </p>
         <h2>Favorite Ed Tech Tools</h2>
         <p class="tools-info">My favorite Educational/Instructional Technology are ones that allow your or your students to create content!
