--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
 			<div class="row blue">
 				<div class="col-xs-12 col-md-3">
-					<a href="Portfolio.html">Portfolio</a>
+					<a class="navigation" href="Portfolio.html">Portfolio</a>
 				</div>
 				<div class="col-xs-12 col-md-3">
-					<a href="index.html">Bio Main Page</a>
+					<a class="navigation" href="index.html">Bio Main Page</a>
 				</div>
 			</div>
         </nav>
