--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,7 +11,7 @@
     <body>
 		<h1>Portfolio</h1>
 		<nav>
-			<div class="row">
+			<div class="row-blue">
 				<div class="col-xs-12 col-md-3">
 					<a href="Portfolio.html">Portfolio</a>
 				</div>
