--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
     </head>
 	<body>
         <h1>Rebecca Swanson</h1>
-        <nav>
-			<div class="row blue">
-				<div class="col-xs-12 col-md-3">
-					<a class="navigation" href="Portfolio.html">Portfolio</a>
-				</div>
-				<div class="col-xs-12 col-md-3">
-					<a class="navigation" href="index.html">Bio Main Page</a>
-				</div>
-			</div>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
         </nav>
+      <main div class = container>
         <h2>Bio</h2>
             <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.</p>
                 <div class="card champ">
@@ -67,6 +74,7 @@
             <p>I use this tool all the time! This is useful, especially for remote learning, to create a tutorial for any website right on the website. Share the link with your parents or students, and it will walk them through how to use that website.
                 This year I have used it the most to show parents and students how to log in and access assignments or provide instructions. </p></li>
         </ul> 
+    </main>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>               
