--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,16 +10,23 @@
 	</head>
     <body>
 		<h1>Portfolio</h1>
-		<nav>
-			<div class="row-blue">
-				<div class="col-xs-12 col-md-3">
-					<a href="Portfolio.html">Portfolio</a>
-				</div>
-				<div class="col-xs-12 col-md-3">
-					<a href="index.html">Bio Main Page</a>
-				</div>
-			</div>
+		<nav class="navbar navbar-dark bg-dark">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
         </nav>
+	<main div class = container>
 			<h2>Resume and Relevant Courses</h2>
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
 				<p>I am also currently a 5th grade Educator. Check out my school below.</p>
@@ -53,6 +60,7 @@
 						Examples of UDL Guidelines can be found here: <a href="http://udlguidelines.cast.org">Cast: The UDL Guidelines</a>
 						</p>
 					</li>
+	</main>
 					<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
