--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,14 +10,22 @@
 	</head>
     <body>
 		<h1>Portfolio</h1>
-		<nav class="navbar navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="Portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
