Major changes to final website

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
 	<body>
-        <h1>Rebecca Swanson</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,6 +18,12 @@
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="Untitled-1.html">Biography</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="Untitled-2.html">Favorite EdTech Tools</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Portfolio.html">Portfolio</a>
@@ -31,53 +36,10 @@
             </div>
         </nav>
       <main div class = container>
-        <h2>Bio</h2>
-            <p>I grew up in the small town of Bermuda Run in Davie County, located near Winston-Salem, North Carolina.</p>
-                <div class="card champ">
-                    <h5 class="card-header">Education</h5>
-                    <div class="card-body">
-                    <h5 class="card-title">Past Education Experience</h5>
-                    <p class="card-text">I attended the University of North Carolina at Greensboro and graduated in 2012 with a B.A. in Political Science.
-                        I attended Salem College and obtained a license to teach K-6 and 6-9 Science and Social Studies in 2015. 
-                        I have been a Residential Adviser, Student Government member and chair leader, political organization Vice President, and President of the Alpha Beta Omicron Chapter of Kappa Delta Pi, the International Honors Society of Education.
-                    </p>
-                    <h5 class="card-title">Current Education Program</h5>
-                    <p class= "card-text">Right now I am attending North Carolina State University in their Technology and Learning Design Masters of Education program. I plan to go into Instructional Design after earning my degree and a certification.
-                    </p>
-                    <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/" class="btn btn-primary">NCSU M.Ed in LD&T</a>
-                    </div>
-                </div>
-            <p>Throughout my career I have taught 2nd, 4th, and 5th grades, and have grown a passion for using technology in my classroom and guiding others on best practices in their own classroom.</p>
-            <p>I currently live in Clemmons, NC with my husband, Chris, and our dog, Riley. My favorite hobbies include amateur astronomy, playing video games, and watching anime and I am an affiliate at twitch.
-            </p>
-        <h2>Favorite Ed Tech Tools</h2>
-        <p class="tools-info">My favorite Educational/Instructional Technology are ones that allow your or your students to create content!
-        </p>
-        <ul class="items-list">
-            <li>Flipgrid
-                <p>Flipgrid allows you or your students to create short videos! These are typically videos of yourself, but you can also record a whiteboard. There are plenty of fun filters, pictures, and emojis to add to the thumbnail or to your video. I also enjoy using fun graphics or the frames to add to your videos. My students enjoy making &quot;newscasts&quot; with their frames.</p></li>
-            <li>Scratch and Scratch, Jr.
-                <p>Scratch and Scratch, Jr. are a great way to introduce coding to an elementary, or middle school, audience using block coding. You can also make this as simple or complicated as you want with Scratch, where you can change the kind of code students are working with. Scratch, Jr. is better for lower grades and can be used to create interactive short videos and games. Scratch is better for older students, and I have used this with students to create games or interactive websites and boards (when combined with Makey Makey). </p></li>
-            <li>Sphero
-                <p>Sphero robots and sphero coding are great! 
-                My class uses these all the time to demonstrate different concepts and play games. 
-                You can also use block coding or basic html to automatically tell the sphero how and where to move. 
-                Sphero is also great for using with obstacle courses and challenges.
-                All around fun robot to have in an elementary classroom for creative activities! </p></li>
-            <li>Chatterpix, Stikbots, and FlipaClip
-                <p>These fun tools are all for videos and stop motion video creation! 
-                Chatterpix is different than the other two, as it lets you take a picture of anything, draw a mouth and have it talk. 
-                This is great for challenging students to make an inanimate object describe itself, or have a character in a story describe their characterists. 
-                FlipaClip and Stikbots are awesome tools for elementary students to create stop motion videos. Using Stikbots, toys, and legos students can create stop motion videos in a simple format. FlipaClip allows students to create a simple stop motion animation through drawing stick figures one frame at a time.</p></li>
-            <li>Makey Makey
-                    <p>You can make ANYTHING into a keyboard using makey makey. Using clips to attach objects to the computer, and turn it into a key you can do all kinds of creative projects. My students in 2nd grade last year, for example, made interactive boards describing the water cycle using makey makey. If you touched part of the board, it was attached and a students' voice would play telling you about that step in the cycle!
-                        The sky is the limit with the creativity with students creating with this tool. Combine with scratch to make your computer do different things when you use the new "keys."</p></li>
-            <li>WeVideo or Camtasia
-            <p>Not as much to say about these two, but they are my favorite video creation sites/software for teachers! It is easy to create videos where you record you, your voice, or your screen. WeVideo also has graphics and music you can add to your videos.</p></li>
-            <li>iorad
-            <p>I use this tool all the time! This is useful, especially for remote learning, to create a tutorial for any website right on the website. Share the link with your parents or students, and it will walk them through how to use that website.
-                This year I have used it the most to show parents and students how to log in and access assignments or provide instructions. </p></li>
-        </ul> 
+        <h2>Rebecca Swanson</h2>
+          <p class="tools-info"> I am currently a 5th grade teacher and first-year graduate students in the Learning Design and Technology program at North Carolina State University. 
+            I live in Clemmons with my husband and dog, and in my free time I like to watch anime, collect board games, and read. 
+            I'm also a part-time content creator on Twitch, Tiktok, Youtube, and Twitter</p>
     </main>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
