--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,11 +18,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                </li>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				  </li>
+				  <li class="nav-item active">
+					  <a class="nav-link" href="Untitled-1.html">Biography</a>
+				  </li>
+				  <li class="nav-item active">
+					  <a class="nav-link" href="Untitled-2.html">Favorite EdTech Tools</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="Portfolio.html">Portfolio</a>
+				  </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -35,8 +41,6 @@
 				<p>I am currently a student in the <a href="https://ced.ncsu.edu/graduate/programs/masters/learning-design-and-technology/">M.Ed in Learning Design and Technology</a> program at N.C. State University.</p>
 				<p>I am also currently a 5th grade Educator. Check out my school below.</p>
 				<a href="http://www.wsfcs.k12.nc.us/griffithes" class="griffith">Griffith Elementary</a>
-				<p> You can find my most recent resume below</p>
-					<iframe src="https://docs.google.com/document/d/e/2PACX-1vRM71m2uzLp9PKWH1ilUX225G_fq1x3EDHozh5GBsMHexeXhxZz6yBhzcjn7vtkEInpbh3MMYrmYJOx/pub?embedded=true" style="width: 1000px; height: 1500px;"></iframe>
 				<p>Relevant courses that I have taken to Instructional Technology and Learning Design include:
 					<ul class="items-list">
 						<li>Theoretical Framework of Advanced Learning Environments</li>
