Accessibility update and link fix

--- a/Biography.html
+++ b/Biography.html
@@ -23,19 +23,15 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="Untitled-1.html">Biography</a>
+                <a class="nav-link" href="Biography.html">Biography</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="Untitled-2.html">Favorite EdTech Tools</a>
+                <a class="nav-link" href="Favorite EdTech Tools.html">Favorite EdTech Tools</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Portfolio.html">Portfolio</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
     </nav>
     <main div class=container>
