--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
 	<body>
+    <h1>Rebecca Swanson</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -20,10 +21,10 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Untitled-1.html">Biography</a>
+                    <a class="nav-link" href="Biography.html">Biography</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Untitled-2.html">Favorite EdTech Tools</a>
+                    <a class="nav-link" href="Favorite EdTech Tools.html">Favorite EdTech Tools</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Portfolio.html">Portfolio</a>
@@ -36,8 +37,8 @@
             </div>
         </nav>
       <main div class = container>
-        <h2>Rebecca Swanson</h2>
-          <p class="tools-info"> I am currently a 5th grade teacher and first-year graduate students in the Learning Design and Technology program at North Carolina State University. 
+        <h2>Welcome</h2>
+          <p class="tools-info"> Welcome to my page! My name is Rebecca Swanson. I am currently a 5th grade teacher and first-year graduate student in the Learning Design and Technology program at North Carolina State University. 
             I live in Clemmons with my husband and dog, and in my free time I like to watch anime, collect board games, and read. 
             I'm also a part-time content creator on Twitch, Tiktok, Youtube, and Twitter</p>
     </main>
