--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <p class="tools-info"> Welcome to my page! My name is Rebecca Swanson. I am currently a 5th grade teacher and first-year graduate student in the Learning Design and Technology program at North Carolina State University. 
             I live in Clemmons with my husband and dog, and in my free time I like to watch anime, collect board games, and read. 
             I'm also a part-time content creator on Twitch, Tiktok, Youtube, and Twitter</p>
+            <script></script>
     </main>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
