add picture, fix links

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </nav>
       <main div class = container>
         <h2>Welcome</h2>
+        <p><img src="https://ncstate-eci519.github.io/my-website-reswans2/20210106_164021.jpg" alt="Portrait Rebecca Swanson" style="width: 300px; height: 450px;"/>
+        </p>
           <p class="tools-info"> Welcome to my page! My name is Rebecca Swanson. I am currently a 5th grade teacher and first-year graduate student in the Learning Design and Technology program at North Carolina State University. 
             I live in Clemmons with my husband and dog, and in my free time I like to watch anime, collect board games, and read. 
             I'm also a part-time content creator on Twitch, Tiktok, Youtube, and Twitter</p>
