--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,7 +27,7 @@
 				  <li class="nav-item active">
 					  <a class="nav-link" href="Favorite EdTech Tools.html">Favorite EdTech Tools</a>
 				  </li>
-				  <li class="nav-item">
+				  <li class="nav-item active">
 					<a class="nav-link" href="Portfolio.html">Portfolio</a>
 				  </li>
               </ul>
