--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <p class="tools-info"> Welcome to my page! My name is Rebecca Swanson. I am currently a 5th grade teacher and first-year graduate student in the Learning Design and Technology program at North Carolina State University. 
             I live in Clemmons with my husband and dog, and in my free time I like to watch anime, collect board games, and read. 
             I'm also a part-time content creator on Twitch, Tiktok, Youtube, and Twitter</p>
+        <h2>Contact Form</h2>
             <form>
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
